using reduce on list of promises

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,9 @@
       // "program": "${workspaceRoot}/Thunk/ex2.js"
       // "program": "${workspaceRoot}/Partial/multiply.js"
       // "program": "${workspaceRoot}/Promise/delay.js"
-      "program": "${workspaceRoot}/Promise/molife.js"
+      // "program": "${workspaceRoot}/Promise/molife.js"
+      // "program": "${workspaceRoot}/Promise/ex3.js"
+      "program": "${workspaceRoot}/Promise/ex4.js"
     }
   ]
 }
