order not gauranteed

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,8 @@
       // "program": "${workspaceRoot}/Promise/molife.js"
       // "program": "${workspaceRoot}/Promise/ex3.js"
       // "program": "${workspaceRoot}/Promise/ex4.js"
-      "program": "${workspaceRoot}/Promise/ex5.js"
+      // "program": "${workspaceRoot}/Promise/ex5.js"
+      "program": "${workspaceRoot}/Promise/ex6.js"
     }
   ]
 }
