--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,8 @@
       // "program": "${workspaceRoot}/Promise/ex6.js"
       // "program": "${workspaceRoot}/Generators/ex1.js"
       // "program": "${workspaceRoot}/Generators/messagePassing.js"
-      "program": "${workspaceRoot}/Generators/messagePassingEx2.js"
+      // "program": "${workspaceRoot}/Generators/messagePassingEx2.js"
+      "program": "${workspaceRoot}/Generators/ajax.js"
     }
   ]
 }
